tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier05Steam-AAAAAAAAAAAAAAAAAAAAAg==__HowCanICarryAllT-AAAAAAAAAAAAAAAAAAACLg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 558,
  "prerequisites": [
    65
  ],
  "properties": {
    "auto_claim": false,
    "desc": "After you made your first steel, you are able to craft a small backpack. It has 36 slots, which is a bit more than a small chest. Later you can make it even larger.\n\nYou can have at most four of these backpacks in your inventory.\n\nYou can put one on your back and set it to automatically pick up stuff. In your controls, check that the command \"Open Backpacks\" has a key and doesn't have conflicts. The key only works after the backpack is added to the back slot, which can be done by using Shift+<Open Backpacks Key>.\n§r\nYou can rename your backpack by pressing Shift+RMB when holding it in your hand.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§3§lHow Can I Carry All These Items?",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    65
  ],
  "rewards": [],
  "tasks": []
}
