tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier05Steam-AAAAAAAAAAAAAAAAAAAAAg==__HowtoopenyourIro-AAAAAAAAAAAAAAAAAAAJHA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2332,
  "prerequisites": [
    1789
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Your iron doors make your Machine Hall or House more safe. They cannot be opened by hand.\n\nNow let's craft some Pressure Plates and Buttons to open these heavy iron doors.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§3§lHow to open your Iron Doors?",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1789
  ],
  "rewards": [],
  "tasks": []
}
