tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier05Steam-AAAAAAAAAAAAAAAAAAAAAg==__JacquesCousteau-AAAAAAAAAAAAAAAAAAAICA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2056,
  "prerequisites": [
    1888
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Now that you have a Scuba Helmet you can safely explore underwater for long periods of time. You just need some compressed air cells. I'll trade you some Tin ingots for a few compressed air cells.\n\nAs your air drops, the helmet will take a compressed air cell and give back an empty cell. Throw these cells into your compressor and you can easily gather clay from beneath rivers. You'll be able to make more cells later once you get an extruder or a plate bender.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§3§lJacques Cousteau",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1888
  ],
  "rewards": [],
  "tasks": []
}
