tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier05Steam-AAAAAAAAAAAAAAAAAAAAAg==__LapisLazuriteSod-AAAAAAAAAAAAAAAAAAADYw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 867,
  "prerequisites": [
    50
  ],
  "properties": {
    "auto_claim": false,
    "desc": "In order to make your bricked blast furnace you need to find a lapis vein containing calcite.\n\nYou can find the vein in the overworld at Y 20-50.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§3§lLapis, Lazurite, Sodalite, Calcite",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "OR",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    50
  ],
  "rewards": [],
  "tasks": []
}
