tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier05Steam-AAAAAAAAAAAAAAAAAAAAAg==__LitWaytoGetCharr-AAAAAAAAAAAAAAAAAAAB8Q==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 497,
  "prerequisites": [
    948,
    478
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The \"Charcoal Pile Igniter\" is an alternative option for mass-producing charcoal. It does not consume any power or steam, but generates a lot of pollution. Follow the steps below to get it working.\n\n1. Build a brick floor no bigger than 11x11 in size.\n2. Place 1-5 layers of logs atop the brick floor. No air gaps allowed.\n3. Place the Charcoal Pile Igniter above the top-center log.\n4. Surround the remaining logs in dirt or grass.\n5. The Charcoal Pile Igniter immediately starts processing\n6. After some time, the logs are converted to brittle charcoal blocks.\n7. Break the blocks with an axe for the charcoal (Luck/Fortune has NO effect on the drop rates).\n\nIf this is your first multiblock, read the extended tooltip (hold shift) for construction requirements, or visit [url]https://wiki.gtnewhorizons.com/wiki/Charcoal_Pile_Igniter[/url] for more information and step-by-step images.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§3§lLit Way to Get Charred",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    948,
    478
  ],
  "rewards": [],
  "tasks": []
}
