tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier05Steam-AAAAAAAAAAAAAAAAAAAAAg==__LucifersLittleHe-AAAAAAAAAAAAAAAAAAAHdA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1908,
  "prerequisites": [
    479
  ],
  "properties": {
    "auto_claim": false,
    "desc": "With an alloy smelter and some netherrack dust you can make Nether furnaces, which are extremely efficient cooking machines. Very handy for someone needing a lot of stuff furnaced in a jiffy.\n\nIn comparison to the Blast Furnace, the only downside to crafting Nether Furnaces is that they cannot be used as a component for the Electric Blast Furnace (EBF) craft later on. Blast Furnaces can. Then again, Nether dust is practically free, so what's the loss? You can always use them to bake stacks of bread!",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§3§lLucifer's Little Helper",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    479
  ],
  "rewards": [],
  "tasks": []
}
